kubernetes/ollama/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama-deployment
  namespace: ollama
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama
  template:
    metadata:
      labels:
        app: ollama
    spec:
      runtimeClassName: "nvidia"
      containers:
      - name: ollama
        image: ollama/ollama:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 11434
        resources:
          requests:
            cpu: "1800m"
            memory: "15Gi"
            nvidia.com/gpu: 1
          limits:
            cpu: "1800m"
            memory: "15Gi"
            nvidia.com/gpu: 1
      tolerations:
      - key: nvidia.com/gpu
        operator: Exists
        effect: NoSchedule
      nodeSelector:
        nvidia.com/gpu.present: "true"
      volumes:
      - name: models
        emptyDir: {}
