kubernetes/ollama/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ollama-ingress
  namespace: ollama
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: kube.softa
    http:
      paths:
      - path: /ollama
        pathType: Prefix
        backend:
          service:
            name: ollama-service
            port:
              number: 11434
